# raise-moodlecli

./: .gitignore  README.md  output.csv  setup.cfg
.github/workflows/: tests.yml
moodlecli/: aws.py  main.py  moodle.py  utils.py
tests/: test_aws.py  test_grades.py  test_main.py  test_moodle.py  test_utils.py
