[metadata]
name = moodle-cli
version = 0.0.1

[options]
packages = moodlecli
install_requires =
    click==8.1.7
    requests==2.31.0
    boto3==1.34.95
    prettytable==3.10.0


[options.extras_require]
test =
    flake8
    pytest
    pytest-mock
    pytest-cov
    requests_mock

[options.entry_points]
console_scripts =
    moodle-cli = moodlecli.main:cli
